Version 7.6.0
- Added new Spin2_v52 keywords
- Fixed spin2 \ interaction with ABORT
- Fixed initialization of packed structures
- Fixed some incorrect file names in zip files
- Fixed a number of bugs in spin2 pointer operations

Version 7.5.1
- Added ioctl function to libc.a
- Fixed snprintf return values
- Improved interaction of conditional assembly and temporary labels
- Suppress combining of memory operations across a wait instruction

Version 7.5.0
- Fixed CMP with src-only registers like PHSA
- Overhauled constant definition code to better support module
parameters. This should largely be invisible to users, but bugs may
have crept in.

Version 7.4.4
- Added some missing libc.a files (thanks to Ada)
- Fixed parameter checking for varargs function variables
- Slightly improved module constant overrides; significant issues remain

Version 7.4.3
- Remove some unused debug strings when debugging is not enabled
- Use stack allocation for passing struct arguments

Version 7.4.2
- Added missing __builtin_frac keyword for C

Version 7.4.1
- Made `@@@func` return the address of the first instruction of the
function func, in both Spin2 and C.
- Fixed an internal error computing offsets in structures stored in registers

Version 7.4.0
- Fixed some errors in C __pasm parsing
- Fixed compile time calculations of QLOG and QEXP (thanks to Ada)
- Fixed many incorrect address calculations for Spin2 ^x variables
- Fixed parsing of large immediate addresses for inline asm call/jmp
- Fixed a long standing bug in loop reduction
- Improved some nucode peephole optimizations
- Some longfill optimizations and bug fixes (thanks to Ada)

Version 7.3.0
- Allow `__attribute__((packed))` on C structs
- Add `-Wbuiltin-fallback` for warning when builtin functions must call libraries
- Make Spin2 structs actually packed
- Fix parsing of `[++]` and `[--]` as pre operators
- Fixed error reporting around __builtin_printf
- Fixed callpa #x, ##longx (keep 20 bits for addresses, not 18)